src/edu/iastate/utils/jep/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package edu.iastate.utils.jep;

import java.util.Vector;

import edu.iastate.utils.jep.function.Add;
import edu.iastate.utils.jep.function.Comparative;
import edu.iastate.utils.jep.function.Divide;
import edu.iastate.utils.jep.function.Logical;
import edu.iastate.utils.jep.function.Modulus;
import edu.iastate.utils.jep.function.Multiply;
import edu.iastate.utils.jep.function.Not;
import edu.iastate.utils.jep.function.PostfixMathCommandI;
import edu.iastate.utils.jep.function.Power;
import edu.iastate.utils.jep.function.Subtract;
import edu.iastate.utils.jep.function.UMinus;

public class Parser /*@bgen(jjtree)*/
    implements ParserTreeConstants, ParserConstants
{ /*@bgen(jjtree)*/
    protected JJTParserState jjtree = new JJTParserState();
    private JEP jep;

    public Node parseStream(java.io.Reader stream, JEP jep_in) throws
        ParseException
    {
        ReInit(stream);
        jep = jep_in;

        // Parse the expression, and return the
        return Start().jjtGetChild(0);
    }

    private void addToErrorList(String errorStr)
    {
        jep.errorList.addElement(errorStr);
    }

    /**
     * Translate all escape sequences to characters. Inspired by Rob Millar's
     * unescape() method in rcm.util.Str fron the Web Sphinx project.
     *
     * @param inputStr String containing escape characters.
     * @return String with all escape sequences replaced.
     */
    private String replaceEscape(String inputStr)
    {
        int len = inputStr.length();
        int p = 0;
        int i;
        String metachars = "tnrbf\\\"'";
        String chars = "\t\n\r\b\f\\\"'";

        StringBuffer output = new StringBuffer();

        while ( (i = inputStr.indexOf('\\', p)) != -1)
        {
            output.append(inputStr.substring(p, i));

            if (i + 1 == len)
            {
                break;
            }

            // find metacharacter
            char metac = inputStr.charAt(i + 1);

            // find the index of the metac
            int k = metachars.indexOf(metac);
            if (k == -1)
            {
                // didn't find the metachar, leave sequence as found.
                // This code should be unreachable if the parser
                // is functioning properly because strings containing
                // unknown escape characters should not be accepted.
                output.append('\\');
                output.append(metac);
            }
            else
            {
                // its corresponding true char
                output.append(chars.charAt(k));
            }

            // skip over both escape character & metacharacter
            p = i + 2;
        }

        // add the end of the input string to the output
        if (p < len)
        {
            output.append(inputStr.substring(p));
        }

        return output.toString();
    }

    /***************************************************************
     GRAMMAR START
     ***************************************************************/
    final public ASTStart Start() throws ParseException
    {
        /*@bgen(jjtree) Start */
        ASTStart jjtn000 = new ASTStart(JJTSTART);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try
        {
            if (jj_2_1(1))
            {
                Expression();
                jj_consume_token(0);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
                {
                    if (true)
                    {
                        return jjtn000;
                    }
                }
            }
            else
            {
                switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
                {
                    case 0:
                        jj_consume_token(0);
                        jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;
                        {
                            if (true)
                            {
                                throw new ParseException(
                                    "No expression entered");
                            }
                        }
                        addToErrorList("No expression entered");
                        {
                            if (true)
                            {
                                return null;
                            }
                        }
                        break;
                    default:
                        jj_la1[0] = jj_gen;
                        jj_consume_token( -1);
                        throw new ParseException();
                }
            }
        }
        catch (Throwable jjte000)
        {
            if (jjtc000)
            {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            }
            else
            {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException)
            {
                {
                    if (true)
                    {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException)
            {
                {
                    if (true)
                    {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true)
                {
                    throw (Error) jjte000;
                }
            }
        }
        finally
        {
            if (jjtc000)
            {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public void Expression() throws ParseException
    {
        OrExpression();
    }

    final public void OrExpression() throws ParseException
    {
        AndExpression();
        label_1:while (true)
        {
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case OR:
                    ;
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    break label_1;
            }
            ASTFunNode jjtn001 = new ASTFunNode(JJTFUNNODE);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            try
            {
                jj_consume_token(OR);
                AndExpression();
                jjtree.closeNodeScope(jjtn001, 2);
                jjtc001 = false;
                jjtn001.setFunction(tokenImage[OR], new Logical(1));
            }
            catch (Throwable jjte001)
            {
                if (jjtc001)
                {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                }
                else
                {
                    jjtree.popNode();
                }
                if (jjte001 instanceof RuntimeException)
                {
                    {
                        if (true)
                        {
                            throw (RuntimeException) jjte001;
                        }
                    }
                }
                if (jjte001 instanceof ParseException)
                {
                    {
                        if (true)
                        {
                            throw (ParseException) jjte001;
                        }
                    }
                }
                {
                    if (true)
                    {
                        throw (Error) jjte001;
                    }
                }
            }
            finally
            {
                if (jjtc001)
                {
                    jjtree.closeNodeScope(jjtn001, 2);
                }
            }
        }
    }

    final public void AndExpression() throws ParseException
    {
        EqualExpression();
        label_2:while (true)
        {
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case AND:
                    ;
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
            }
            ASTFunNode jjtn001 = new ASTFunNode(JJTFUNNODE);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            try
            {
                jj_consume_token(AND);
                EqualExpression();
                jjtree.closeNodeScope(jjtn001, 2);
                jjtc001 = false;
                jjtn001.setFunction(tokenImage[AND], new Logical(0));
            }
            catch (Throwable jjte001)
            {
                if (jjtc001)
                {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                }
                else
                {
                    jjtree.popNode();
                }
                if (jjte001 instanceof RuntimeException)
                {
                    {
                        if (true)
                        {
                            throw (RuntimeException) jjte001;
                        }
                    }
                }
                if (jjte001 instanceof ParseException)
                {
                    {
                        if (true)
                        {
                            throw (ParseException) jjte001;
                        }
                    }
                }
                {
                    if (true)
                    {
                        throw (Error) jjte001;
                    }
                }
            }
            finally
            {
                if (jjtc001)
                {
                    jjtree.closeNodeScope(jjtn001, 2);
                }
            }
        }
    }

    final public void EqualExpression() throws ParseException
    {
        RelationalExpression();
        label_3:while (true)
        {
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case EQ:
                case NE:
                    ;
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_3;
            }
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case NE:
                    ASTFunNode jjtn001 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
                    try
                    {
                        jj_consume_token(NE);
                        RelationalExpression();
                        jjtree.closeNodeScope(jjtn001, 2);
                        jjtc001 = false;
                        jjtn001.setFunction(tokenImage[NE], new Comparative(4));
                    }
                    catch (Throwable jjte001)
                    {
                        if (jjtc001)
                        {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte001;
                                }
                            }
                        }
                        if (jjte001 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte001;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte001;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc001)
                        {
                            jjtree.closeNodeScope(jjtn001, 2);
                        }
                    }
                    break;
                case EQ:
                    ASTFunNode jjtn002 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
                    try
                    {
                        jj_consume_token(EQ);
                        RelationalExpression();
                        jjtree.closeNodeScope(jjtn002, 2);
                        jjtc002 = false;
                        jjtn002.setFunction(tokenImage[EQ], new Comparative(5));
                    }
                    catch (Throwable jjte002)
                    {
                        if (jjtc002)
                        {
                            jjtree.clearNodeScope(jjtn002);
                            jjtc002 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte002 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte002;
                                }
                            }
                        }
                        if (jjte002 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte002;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte002;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc002)
                        {
                            jjtree.closeNodeScope(jjtn002, 2);
                        }
                    }
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token( -1);
                    throw new ParseException();
            }
        }
    }

    final public void RelationalExpression() throws ParseException
    {
        AdditiveExpression();
        label_4:while (true)
        {
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case GT:
                case LT:
                case LE:
                case GE:
                    ;
                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_4;
            }
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case LT:
                    ASTFunNode jjtn001 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
                    try
                    {
                        jj_consume_token(LT);
                        AdditiveExpression();
                        jjtree.closeNodeScope(jjtn001, 2);
                        jjtc001 = false;
                        jjtn001.setFunction(tokenImage[LT], new Comparative(0));
                    }
                    catch (Throwable jjte001)
                    {
                        if (jjtc001)
                        {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte001;
                                }
                            }
                        }
                        if (jjte001 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte001;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte001;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc001)
                        {
                            jjtree.closeNodeScope(jjtn001, 2);
                        }
                    }
                    break;
                case GT:
                    ASTFunNode jjtn002 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
                    try
                    {
                        jj_consume_token(GT);
                        AdditiveExpression();
                        jjtree.closeNodeScope(jjtn002, 2);
                        jjtc002 = false;
                        jjtn002.setFunction(tokenImage[GT], new Comparative(1));
                    }
                    catch (Throwable jjte002)
                    {
                        if (jjtc002)
                        {
                            jjtree.clearNodeScope(jjtn002);
                            jjtc002 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte002 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte002;
                                }
                            }
                        }
                        if (jjte002 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte002;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte002;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc002)
                        {
                            jjtree.closeNodeScope(jjtn002, 2);
                        }
                    }
                    break;
                case LE:
                    ASTFunNode jjtn003 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc003 = true;
                    jjtree.openNodeScope(jjtn003);
                    try
                    {
                        jj_consume_token(LE);
                        AdditiveExpression();
                        jjtree.closeNodeScope(jjtn003, 2);
                        jjtc003 = false;
                        jjtn003.setFunction(tokenImage[LE], new Comparative(2));
                    }
                    catch (Throwable jjte003)
                    {
                        if (jjtc003)
                        {
                            jjtree.clearNodeScope(jjtn003);
                            jjtc003 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte003 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte003;
                                }
                            }
                        }
                        if (jjte003 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte003;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte003;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc003)
                        {
                            jjtree.closeNodeScope(jjtn003, 2);
                        }
                    }
                    break;
                case GE:
                    ASTFunNode jjtn004 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc004 = true;
                    jjtree.openNodeScope(jjtn004);
                    try
                    {
                        jj_consume_token(GE);
                        AdditiveExpression();
                        jjtree.closeNodeScope(jjtn004, 2);
                        jjtc004 = false;
                        jjtn004.setFunction(tokenImage[GE], new Comparative(3));
                    }
                    catch (Throwable jjte004)
                    {
                        if (jjtc004)
                        {
                            jjtree.clearNodeScope(jjtn004);
                            jjtc004 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte004 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte004;
                                }
                            }
                        }
                        if (jjte004 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte004;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte004;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc004)
                        {
                            jjtree.closeNodeScope(jjtn004, 2);
                        }
                    }
                    break;
                default:
                    jj_la1[6] = jj_gen;
                    jj_consume_token( -1);
                    throw new ParseException();
            }
        }
    }

    final public void AdditiveExpression() throws ParseException
    {
        MultiplicativeExpression();
        label_5:while (true)
        {
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case PLUS:
                case MINUS:
                    ;
                    break;
                default:
                    jj_la1[7] = jj_gen;
                    break label_5;
            }
            switch ( (jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case PLUS:
                    ASTFunNode jjtn001 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
                    try
                    {
                        jj_consume_token(PLUS);
                        MultiplicativeExpression();
                        jjtree.closeNodeScope(jjtn001, 2);
                        jjtc001 = false;
                        jjtn001.setFunction(tokenImage[PLUS], new Add());
                    }
                    catch (Throwable jjte001)
                    {
                        if (jjtc001)
                        {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte001 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte001;
                                }
                            }
                        }
                        if (jjte001 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte001;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte001;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc001)
                        {
                            jjtree.closeNodeScope(jjtn001, 2);
                        }
                    }
                    break;
                case MINUS:
                    ASTFunNode jjtn002 = new ASTFunNode(JJTFUNNODE);
                    boolean jjtc002 = true;
                    jjtree.openNodeScope(jjtn002);
                    try
                    {
                        jj_consume_token(MINUS);
                        MultiplicativeExpression();
                        jjtree.closeNodeScope(jjtn002, 2);
                        jjtc002 = false;
                        jjtn002.setFunction(tokenImage[MINUS], new Subtract());
                    }
                    catch (Throwable jjte002)
                    {
                        if (jjtc002)
                        {
                            jjtree.clearNodeScope(jjtn002);
                            jjtc002 = false;
                        }
                        else
                        {
                            jjtree.popNode();
                        }
                        if (jjte002 instanceof RuntimeException)
                        {
                            {
                                if (true)
                                {
                                    throw (RuntimeException) jjte002;
                                }
                            }
                        }
                        if (jjte002 instanceof ParseException)
                        {
                            {
                                if (true)
                                {
                                    throw (ParseException) jjte002;
                                }
                            }
                        }
                        {
                            if (true)
                            {
                                throw (Error) jjte002;
                            }
                        }
                    }
                    finally
                    {
                        if (jjtc002)
                        {
                            jjtree.closeNodeScope(jjtn002, 2);
                        }
                    }
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    jj_consume_token( -1);
                    throw new ParseException();
            }
        }
    }

    final public void MultiplicativeExpression() throws ParseException
    {
        UnaryExpression();
        label_6:while (true)
        {
            if (jj_2_2(1))
            {
                ;
            }
            else
            {
                break label_6;
            }
            if (jj_2_3(1))
            {
                ASTFunNode jjtn001 = new ASTFunNode(JJTFUNNODE);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
                try
                {
                    PowerExpression();
                    jjtree.closeNodeScope(jjtn001, 2);
                    jjtc001 = false;
                    if (!jep.implicitMul)
                    {
                        if (true)
                        {
                            throw new ParseException(
                                "Syntax Error (implicit multiplication not enabled)");
                        }
                    }
